Porting GildedRoseRefactoring